Revert "Lint"
This reverts commit 80c89911e0caefddd96c1cc13826bfba41494b32.